tests/valid/unop_implicit_cast.ar
fn main() {
    {
        const a: i8;
        const b = -a;
    }

    {
        const a: i16;
        const b = -a;
    }

    {
        const a: i32;
        const b = -a;
    }

    {
        const a: i64;
        const b = -a;
    }

    {
        const a: i64;
        const b = -a;
    }

    {
        const a = 1;
        const b = -a;
    }

    {
        const a: i8 = 127;
        const b = -a;
        const c: i8 = a + b;
    }
}
