tests/invalid/i8_literal_overflow.ar
fn main() 
{
    let a: i8 = 128;
}
